--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ footer {
         </p>
         <p> 
         <b>Java Edition ip:</b> mc.papasot.net </p>
-        <img alt="2024-05-17_22.18.16.png" src="https://github.com/ioannis2008/PapasotSMP/blob/0612fdedcd899495391a1593a283d3a8e016ab13/2024-05-17_22.18.16.png?raw=true" data-hpc="true" class="Box-sc-g0xbh4-0 kzRgrI"class="responsive">
+        <img alt="2024-05-17_22.18.16.png" src="https://github.com/ioannis2008/PapasotSMP/blob/0612fdedcd899495391a1593a283d3a8e016ab13/2024-05-17_22.18.16.png?raw=true" width="528" height="297" data-hpc="true" class="Box-sc-g0xbh4-0 kzRgrI"class="responsive">
         <p>
         <b>Bedrock Edition ip and port:</b> mcb.papasot.net , 3710 </p>
         <img src="https://lh4.googleusercontent.com/qEkVPK45W_25t02zuHUKqq73y5qtqiqfTr1StIJOdgPVLKVZIrRXTTJrPNkEmTMY8rfkk8PYlZ5THzlepW930h8" alt="Papasot SMP Bedrock" width="528" height="297"class="responsive">
