--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ footer {
         </p>
         <p> 
         <b>Java Edition ip:</b> mc.papasot.net </p>
-        <img src="https://lh3.googleusercontent.com/SrMk2QrZXJrMP9cC9q3vC3B8GdL3pW8LI06exeQDMbIsjIyeK0SbNbbBPpHPBVLoT2RcxhBzXZuE3dxSVaGpMAVUwY3qQz4YszAJPlmeVebyfi1jbgmD1tseuexQTRZF-A=w1280" alt="Papasot SMP Java" width="500" height="333"class="responsive">
+        <img src="https://github.com/ioannis2008/PapasotSMP/blob/0612fdedcd899495391a1593a283d3a8e016ab13/2024-05-17_22.18.16.png?raw=true" alt="Papasot SMP Java" width="500" height="333"class="responsive">
         <p>
         <b>Bedrock Edition ip and port:</b> mcb.papasot.net , 3710 </p>
         <img src="https://lh4.googleusercontent.com/qEkVPK45W_25t02zuHUKqq73y5qtqiqfTr1StIJOdgPVLKVZIrRXTTJrPNkEmTMY8rfkk8PYlZ5THzlepW930h8" alt="Papasot SMP Bedrock" width="528" height="297"class="responsive">
