--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@ footer {
         <img src="https://github.com/ioannis2008/PapasotSMP/blob/0612fdedcd899495391a1593a283d3a8e016ab13/2024-05-17_22.18.16.png?raw=true" alt="Papasot SMP Java" width="500" height="333"class="responsive">
         <p>
         <b>Bedrock Edition ip and port:</b> mcb.papasot.net , 3710 </p>
-        <img src="https://lh4.googleusercontent.com/qEkVPK45W_25t02zuHUKqq73y5qtqiqfTr1StIJOdgPVLKVZIrRXTTJrPNkEmTMY8rfkk8PYlZ5THzlepW930h8" alt="Papasot SMP Bedrock" width="528" height="297"class="responsive">
+        <img src="https://github.com/ioannis2008/PapasotSMP/blob/0612fdedcd899495391a1593a283d3a8e016ab13/IMG_7264.jpg?raw=true" alt="Papasot SMP Bedrock" width="528" height="297"class="responsive">
         <p>
         <b> World Map:</b> <a style="color: green;(166, 255, 0);" href="http://map.papasot.net:61801" target="_blank">map.papasot.net:61801</a> </a> </p>
-        <img src="https://lh5.googleusercontent.com/rJGNx9uixoeilu2-Bd7R3NfzMNcqC8-eLqihM4nZtrR-lnz0-uy0oWcEkoO_Euqg1q1hqXeg5TFY1MoqVby5N2s" alt="Papasot SMP Map" width="504" height="258"class="responsive">
+        <img src="https://github.com/ioannis2008/PapasotSMP/blob/0612fdedcd899495391a1593a283d3a8e016ab13/bluemap-screenshot.png?raw=true" alt="Papasot SMP Map" width="504" height="258"class="responsive">
           <h3>&nbsp</h3>  
           </div class="main">
         
