--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ footer {
 </head>
 
 <div class="navbar">
-  <b><a href="papasot.net"target="_blank">Papasot SMP</a></b>
-  <a href="screenshots.papasot.net"target="_blank">Screenshots</a>
+  <b><a href="https://papasot.net"target="_blank">Papasot SMP</a></b>
+  <a href="https://screenshots.papasot.net"target="_blank">Screenshots</a>
   <div class="dropdown">
     <button class="dropbtn">Help 
       <i class="fa fa-caret-down"></i>
