--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@ footer {
         </p>
         <p> 
         <b>Java Edition ip:</b> mc.papasot.net </p>
-        <img src="https://github.com/ioannis2008/PapasotSMP/blob/0612fdedcd899495391a1593a283d3a8e016ab13/2024-05-17_22.18.16.png?raw=true" alt="Papasot SMP Java" width="500" height="333"class="responsive">
+        <img src="https://raw.githubusercontent.com/ioannis2008/PapasotSMP/main/2024-05-17_22.18.16%20Large.jpeg" alt="Papasot SMP Java" width="500" height="333"class="responsive">
         <p>
         <b>Bedrock Edition ip and port:</b> mcb.papasot.net , 3710 </p>
-        <img src="https://github.com/ioannis2008/PapasotSMP/blob/0612fdedcd899495391a1593a283d3a8e016ab13/IMG_7264.jpg?raw=true" alt="Papasot SMP Bedrock" width="528" height="297"class="responsive">
+        <img src="https://raw.githubusercontent.com/ioannis2008/PapasotSMP/main/IMG_7264%20Large.jpeg" alt="Papasot SMP Bedrock" width="528" height="297"class="responsive">
         <p>
         <b> World Map:</b> <a style="color: green;(166, 255, 0);" href="http://map.papasot.net:61801" target="_blank">map.papasot.net:61801</a> </a> </p>
-        <img src="https://github.com/ioannis2008/PapasotSMP/blob/0612fdedcd899495391a1593a283d3a8e016ab13/bluemap-screenshot.png?raw=true" alt="Papasot SMP Map" width="504" height="258"class="responsive">
+        <img src="https://raw.githubusercontent.com/ioannis2008/PapasotSMP/main/bluemap-screenshot%20Large.jpeg" alt="Papasot SMP Map" width="504" height="258"class="responsive">
           <h3>&nbsp</h3>  
           </div class="main">
         
