--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ footer {
         <b>Java Edition ip:</b> mc.papasot.net </p>
         <img src="https://raw.githubusercontent.com/ioannis2008/PapasotSMP/main/2024-05-17_22.18.16%20Large.jpeg" alt="Papasot SMP Java" width="500" height="333"class="responsive">
         <p>
-        <b>Bedrock Edition ip:</b> mcb.papasot.net Port: 50197 </p>
+        <b>Bedrock Edition ip:</b> mcb.papasot.net, Port: 50197 </p>
         <img src="https://raw.githubusercontent.com/ioannis2008/PapasotSMP/main/IMG_7264%20Large.jpeg" alt="Papasot SMP Bedrock" width="528" height="297"class="responsive">
         <p>
         <b> World Map:</b> <a style="color: green;(166, 255, 0);" href="http://map.papasot.net:61801" target="_blank">map.papasot.net:61801</a> </a> </p>
